fix spacing

--- a/youtube/static/youtube/about.css
+++ b/youtube/static/youtube/about.css
@@ -31,10 +31,6 @@
   height: auto;
 }
 
-div {
-  padding-bottom: 50rem;
-}
-
 h1 {
   font-size: larger;
 }
